--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "author": "jit Rana magar",
-  "website":"https://www.jitbahadurrana.com.np",
+  "website": "https://www.jitbahadurrana.com.np",
   "scripts": {
     "dev:*": "next dev -p 2200",
     "start-prod": "next start",
@@ -12,15 +12,14 @@
     "dev:tailwind": "npx tailwindcss -i ./styles/main.css -o ./styles/global.css --watch",
     "lint": "next lint",
     "start": "NODE_ENV=production node server.js"
-
   },
   "dependencies": {
-    "antd": "^5.1.4",
+    "antd": "^5.4.4",
     "axios": "^0.21.4",
     "concurrent": "^0.3.2",
     "next": "12.1.6",
+    "next-barcode": "^1.4.0",
     "react": "18.1.0",
-    "react-barcodes": "^1.2.0",
     "react-bootstrap-icons": "^1.8.2",
     "react-dom": "18.1.0",
     "react-dropzone": "^14.2.2",
